--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-	<title>Omega Alpha -- Remembering the ORIGIN and Seeking the SUMMIT</title>
+	<title>Omega Alpha | Does God Play Dice</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/simple-line-icons.css">
@@ -56,14 +56,14 @@ Navigation bar
 		<div id="menu-1" class="homepage home-section container">
 			<div class="home-intro text-center">
 				<h2 class="welcome-title animated fadeInLeft">HONG HAO</h2>
-				<p class="animated fadeInRight">Reading! Reading! Reading! That's the most important thing!</p>
+				<p class="animated fadeInRight">Keep moving forward! That's the most important thing!</p>
 			</div>
 			<div class="home-projects">
 				<div class="row">
 					<div class="col-md-6 col-sm-12">
 						<div class="project-title animated fadeInUp">
 							<h2>Research Interest</h2>
-							<p>Machine Learning, Data Mining &amp; Bioinformatics. Also a Mathematics enthusiast. I like theoretical analysis.<br /> Skilled Language: Matlab, Python, C++.</p>
+							<p>In recent years, I focused on researching machine learning, deep learning &amp; bioinformatics. I always prefer to explore the theoretical principles of new techniques or methologies. It makes me happy when I uncover the mathematical priciples of new models/techniques instead of just learn how to implement them. Although I graduated from mathematics, comprehensively understanding them is still challenging and demanding. I marvel at the immensity and beauty of math. It would be a long and tough way and I enjoy it. Go for it!</p>
 						</div>
 					</div>
 					<div class="project-home-holder col-md-6 col-sm-12">
@@ -113,7 +113,7 @@ Navigation bar
 					<div class="col-md-6 col-md-offset-3">
 						<div class="inner-story animated fadeInRight text-center">
 							<h2>ABOUT ME</h2>
-							<p>I am Mike. I built this website and blog to record my study and thinking. There are massive things need to be recorded since I prefer to make all things be arranged in an orderly way. :)</p>
+							<p>I am Mike. I built this website and blog to record my study and life, to share interesting things by pictures and words. I am kind of a procrastinator. Hope this website and blog would remind and push me to keep the habit of recording and writing. :)</p>
 						</div>
 					</div>
 				</div>
@@ -138,7 +138,7 @@ Navigation bar
 								</figure>
 								<div class="offer-content text-center">
 									<h4>WORKING</h4>
-									<p>Averagely, I spend about ten hours per day in studying machine learning and data mining theories. Actually, I prefer to understand these theories from mathematics perspective.<p>
+									<p>For research, I focused on applying machine learning or deep learning techniques to omics data analysis including transcriptomics and epigenomics. Actually, I prefer to understand these techniques from mathematical perspectives.<p>
 									<span class="offer-left"><i></i></span>
 									<span class="offer-right"><i></i></span>
 								</div>
@@ -151,7 +151,7 @@ Navigation bar
 								</figure>
 								<div class="offer-content text-center">
 									<h4>Playing</h4>
-									<p>Swimming makes me feel free and relaxed. That's my daily routine in summer. Swimming, ping-pong and guitar are my amusement tags.</p>
+									<p>I like swimming. It makes me feel free and relaxed. That's my daily routine in summer. Swimming and playing the guitar are my entertainments in leisure time.</p>
 									<span class="offer-left"><i></i></span>
 									<span class="offer-right"><i></i></span>
 								</div>
@@ -189,7 +189,7 @@ Navigation bar
 						<div class="project-item">
 							<img src="img/read3.jpg" alt="">
 							<div class="overlay">
-								<h4><a href="#">Read by MOOC</a></h4>
+								<h4><a href="#">Learn with MOOC</a></h4>
 							</div>
 						</div>
 					</div>
@@ -234,7 +234,7 @@ Navigation bar
 		<div id="menu-4" class="content blog-section container">
 			<div class="blog-header text-center">
 				<h2 class="animated fadeInRight" href="/blog">Bumble Bee</h2>
-				<p class="animated fadeInLeft" align="left" style="width: 90%; display: block; margin-left: auto; margin-right: auto"><span class="blue">Bumble Bee</span> is a static blog built by Jekyll (a powerful framework could compile static blogs from markdown files automatically.). At first, I spend too much time in designing the layout of the webpages while no blog was posted. I realized that my main job should be writing more blogs. Thus I need to choose a suitable template and focus on writing quickly. <span class="blue">iLotus</span> is my final choose. It's a beautiful theme forked from <a href="http://www.zhanxin.info">Pizn</a>. And it is simple and comfortable for reading. Additionally, I also add many new features, like code highlight, quickly search and math formulation supports, to improve the template. Within these powerful tools, I really enjoy the processes of writing blogs.</p>
+				<p class="animated fadeInLeft" align="left" style="width: 90%; display: block; margin-left: auto; margin-right: auto"><span class="blue">Bumble Bee</span> is a static blog built by Jekyll (a powerful framework could compile static blogs from markdown files automatically.). At the begining, I spend too much time in webpage design while no blog was posted. I realized that my main job should be writing more blogs. Thus I chose a suitable template and focus on writing quickly. <span class="blue">iLotus</span> is my final choice. It's a beautiful theme forked from <a href="http://www.zhanxin.info">Pizn</a>. And it is simple and comfortable for reading. Additionally, I also add many new custom features, like code highlight, quickly search and math formulation supports, to enrich its functions. Within these powerful tools, I really enjoy the processes of writing blogs.</p>
 				<p class="animated zoomIn"><span class="green">Announcement</span>: Posts in the blog are under the Creative Common Lisence.</p>
 				<ul class="main-button animated zoomIn enterblog">
 					<li class="" style=""><a target="_blank" href="/blog">ENTER THE BLOG</a></li>
@@ -274,7 +274,7 @@ Navigation bar
 									<input type="text" name="subject" placeholder="Subject">
 								</fieldset>
 								<fieldset class="col-md-12">
-									<textarea name="message" id="message" cols="30" rows="10" placeholder="Leave a message"></textarea>
+									<textarea name="message" id="message" cols="30" rows="10" placeholder="Leave a message (Not work yet)"></textarea>
 								</fieldset>
 								<fieldset class="col-md-12">
 									<a href="#" class="message-button">Submit Message</a>
