--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Navigation bar
 						<div class="row">
 							<div class="col-md-6 col-sm-6">
 								<div class="project-item one animated fadeInRight">
-									<img src="img/hobby1.jpg" alt="">
+									<img src="photos/hobby1.jpg" alt="">
 									<div class="overlay">
 										<h4><a href="#">Mathematics</a></h4>
 									</div>
@@ -78,7 +78,7 @@ Navigation bar
 							</div>
 							<div class="col-md-6 col-sm-6">
 								<div class="project-item two animated fadeInRight">
-									<img src="img/hobby2.jpg" alt="">
+									<img src="photos/hobby2.jpg" alt="">
 									<div class="overlay">
 										<h4><a href="#">Reading</a></h4>
 									</div>
@@ -86,7 +86,7 @@ Navigation bar
 							</div>
 							<div class="col-md-6 col-sm-6">
 								<div class="project-item three animated fadeInRight">
-									<img src="img/hobby3.jpg" alt="">
+									<img src="photos/hobby3.jpg" alt="">
 									<div class="overlay">
 										<h4><a href="#">Geeking</a></h4>
 									</div>
@@ -94,7 +94,7 @@ Navigation bar
 							</div>
 							<div class="col-md-6 col-sm-6">
 								<div class="project-item four animated fadeInRight">
-									<img src="img/hobby4.jpg" alt="">
+									<img src="photos/hobby4.jpg" alt="">
 									<div class="overlay">
 										<h4><a href="#">Guitar</a></h4>
 									</div>
@@ -134,7 +134,7 @@ Navigation bar
 						<div class="col-md-6">
 							<div class="offer-item offer-1 animated fadeInLeft">
 								<figure>
-									<img src="img/a1.jpg" alt="">
+									<img src="photos/aboutme_work.jpg" alt="">
 								</figure>
 								<div class="offer-content text-center">
 									<h4>WORKING</h4>
@@ -147,7 +147,7 @@ Navigation bar
 						<div class="col-md-6">
 							<div class="offer-item offer-2 animated fadeInRight">
 								<figure>
-									<img src="img/a2.jpg" alt="">
+									<img src="photos/aboutme_play.jpg" alt="">
 								</figure>
 								<div class="offer-content text-center">
 									<h4>Playing</h4>
@@ -171,7 +171,7 @@ Navigation bar
 				<div class="row">
 					<div class="col-md-4 col-sm-6 p-1 animated umScaleIn">
 						<div class="project-item">
-							<img src="img/read1.jpg" alt="">
+							<img src="photos/read1.jpg" alt="">
 							<div class="overlay">
 								<h4><a href="#">Volume One Finished</a></h4>
 							</div>
@@ -179,7 +179,7 @@ Navigation bar
 					</div>
 					<div class="col-md-4 col-sm-6 p-2 animated umScaleIn">
 						<div class="project-item">
-							<img src="img/read2.jpg" alt="">
+							<img src="photos/read2.jpg" alt="">
 							<div class="overlay">
 								<h4><a href="#">Chapter 9/14</a></h4>
 							</div>
@@ -187,7 +187,7 @@ Navigation bar
 					</div>
 					<div class="col-md-4 col-sm-6 p-3 animated umScaleIn">
 						<div class="project-item">
-							<img src="img/read3.jpg" alt="">
+							<img src="photos/read3.jpg" alt="">
 							<div class="overlay">
 								<h4><a href="#">Learn with MOOC</a></h4>
 							</div>
@@ -197,7 +197,7 @@ Navigation bar
 				<div class="row">
 					<div class="col-md-3 col-sm-6 p-4 animated umScaleIn">
 						<div class="project-item animated umScaleIn">
-							<img src="img/read4.jpg" alt="">
+							<img src="photos/read4.jpg" alt="">
 							<div class="overlay">
 								<h4><a href="#">Underway</a></h4>
 							</div>
@@ -205,7 +205,7 @@ Navigation bar
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<div class="project-item p-5 animated umScaleIn">
-							<img src="img/read5.jpg" alt="">
+							<img src="photos/read5.jpg" alt="">
 							<div class="overlay">
 								<h4><a href="#">Underway</a></h4>
 							</div>
@@ -213,7 +213,7 @@ Navigation bar
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<div class="project-item p-6 animated umScaleIn">
-							<img src="img/6.jpg" alt="">
+							<img src="photos/read6.jpg" alt="">
 							<div class="overlay">
 								<h4><a href="#">Book Six</a></h4>
 							</div>
@@ -221,7 +221,7 @@ Navigation bar
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<div class="project-item p-7 animated umScaleIn">
-							<img src="img/7.jpg" alt="">
+							<img src="photos/read7.jpg" alt="">
 							<div class="overlay">
 								<h4><a href="#">Book Seven</a></h4>
 							</div>
