A test for new structure

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Navigation bar
 	<div id="menu-container">
 		<div id="menu-1" class="homepage home-section container">
 			<div class="home-intro text-center">
-				<h2 class="welcome-title animated fadeInLeft">HONG HAO</h2>
+				<h2 class="welcome-title animated fadeInLeft">Michael H. Hung</h2>
 				<p class="animated fadeInRight">Keep moving forward! That's the most important thing!</p>
 			</div>
 			<div class="home-projects">
