--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Omega Alpha | Machine Learner</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/simple-line-icons.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/templatemo_style.css">
+	<link rel="stylesheet" href="css/main-bootstrap.min.css">
+	<link rel="stylesheet" href="css/main-font-awesome.min.css">
+	<link rel="stylesheet" href="css/main-simple-line-icons.css">
+	<link rel="stylesheet" href="css/main-animate.css">
+	<link rel="stylesheet" href="css/main-templatemo_style.css">
 </head>
 
 <body>
@@ -313,8 +313,8 @@ Navigation bar
 	<span class="shape-1"></span>
 	<span class="shape-2"></span>
 
-	<script src="js/jquery.min.js"></script>
-	<script src="js/templatemo_custom.js"></script>
+	<script src="js/main-blog-jquery.min.js"></script>
+	<script src="js/main-templatemo-custom.js"></script>
 
 </body>
 </html>
