new updated main page

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@ Navigation bar
 		<div id="menu-1" class="homepage home-section container">
 			<div class="home-intro text-center">
 				<h2 class="welcome-title animated fadeInLeft">Michael H. Hung</h2>
-				<p class="animated fadeInRight">Keep moving forward! That's the most important thing!</p>
+				<p class="animated fadeInRight">Don't worry about yourself, just take care of your research!</p>
 			</div>
 			<div class="home-projects">
 				<div class="row">
 					<div class="col-md-6 col-sm-12">
 						<div class="project-title animated fadeInUp">
 							<h2>Research Interest</h2>
-							<p>In recent years, I focused on researching machine learning, deep learning &amp; bioinformatics. I always prefer to explore the theoretical principles of new techniques or methologies. It makes me happy when I uncover the mathematical priciples of new models/techniques instead of just learn how to implement them. Although I graduated from mathematics, comprehensively understanding them is still challenging and demanding. I marvel at the immensity and beauty of math. It would be a long and tough way and I enjoy it. Go for it!</p>
+							<p>I focus on researching machine learning, deep learning &amp; bioinformatics. I prefer to explore the theoretical principles of new techniques or mathematical models. It makes me happy when I uncover some mathematical insights of new models/techniques instead of just knowing how to implement them. I marvel at the immensity and beauty of math. Exploring it would be a long and tough way to go and I enjoy it. Go for it!</p>
 						</div>
 					</div>
 					<div class="project-home-holder col-md-6 col-sm-12">
@@ -113,7 +113,7 @@ Navigation bar
 					<div class="col-md-6 col-md-offset-3">
 						<div class="inner-story animated fadeInRight text-center">
 							<h2>ABOUT ME</h2>
-							<p>I am Mike. I built this website and blog to record my study and life, to share interesting things by pictures and words. I am kind of a procrastinator. Hope this website and blog would remind and push me to keep the habit of recording and writing. :)</p>
+							<p>I am Mike. I built this website and blog to record my research and life, to share interesting things by pictures and words. I am kind of a procrastinator. Hope this website and blog would remind and push me to keep the habit of recording and writing. :)</p>
 						</div>
 					</div>
 				</div>
@@ -138,7 +138,7 @@ Navigation bar
 								</figure>
 								<div class="offer-content text-center">
 									<h4>WORKING</h4>
-									<p>For research, I focused on applying machine learning or deep learning techniques to omics data analysis including transcriptomics and epigenomics. Actually, I prefer to understand these techniques from mathematical perspectives.<p>
+									<p>For research, I focused on applying machine learning or deep learning techniques to omics data analysis including transcriptomics and epigenomics. I prefer to understand these techniques from mathematical perspectives.<p>
 									<span class="offer-left"><i></i></span>
 									<span class="offer-right"><i></i></span>
 								</div>
