try to update jQuery and its plugins

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ Navigation bar
 	<span class="shape-1"></span>
 	<span class="shape-2"></span>
 
-	<script src="js/main-blog-jquery.min.js"></script>
+	<script src="js/jquery-3.4.1.min.js"></script>
 	<script src="js/main-templatemo-custom.js"></script>
 
 </body>
