--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Omega Alpha | Machine Learner</title>
-		<link rel="stylesheet" href="css/main-bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/main-font-awesome.min.css">
 		<link rel="stylesheet" href="css/main-simple-line-icons.css">
 		<link rel="stylesheet" href="css/main-animate.css">
@@ -313,7 +313,7 @@
 		<span class="shape-1"></span>
 		<span class="shape-2"></span>
 
-		<script src="js/jquery-3.4.1.min.js"></script>
+		<script src="js/jquery-3.7.0.min.js"></script>
 		<script src="js/main-templatemo-custom.js"></script>
 
 	</body>
