--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Omega Alpha | Machine Learner</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 		<link rel="stylesheet" href="css/main-font-awesome.min.css">
 		<link rel="stylesheet" href="css/main-simple-line-icons.css">
-		<link rel="stylesheet" href="css/main-animate.css">
-		<link rel="stylesheet" href="css/main-templatemo_style.css">
+		<link rel="stylesheet" href="css/omegahh.css">
 	</head>
 
 	<body>
@@ -16,19 +16,17 @@
 		<!--
 			Navigation bar
 		-->
-		<header class="site-header container animated fadeInDown">
+		<header class="site-header container">
 			<div class="header-wrapper">
 				<div class="row">
-					<div class="col-md-4">
-						<div class="site-branding">
-							<a href="#"><h1>Omegalpha</h1></a>
-						</div>
+					<div class="col-md-4 site-branding">
+						<a href="#"><h1>Omegalpha</h1></a>
 					</div>
-					<a href="#" class="toggle-nav hidden-md hidden-lg">
+					<a href="#" class="toggle-nav d-lg-none">
 						<i class="fa fa-bars"></i>
 					</a>
 					<div class="col-md-8">
-						<nav id="nav" class="main-navigation hidden-xs hidden-sm">
+						<nav id="nav" class="main-navigation d-none d-lg-block">
 							<ul class="main-menu">
 								<li><a class="show-1 active homebutton" href="#">Home</a></li>
 								<li><a class="show-2 aboutbutton" href="#">About Me</a></li>
@@ -37,13 +35,13 @@
 								<li><a class="show-5 contactbutton" href="#">Contact</a></li>
 							</ul>
 						</nav>
-						<nav class="main-navigation menu-responsive hidden-md hidden-lg">
+						<nav class="main-navigation menu-responsive d-lg-none">
 							<ul class="main-menu">
-								<li><a class="show-1 active homebutton" href="#">Home</a></li>
-								<li><a class="show-2 aboutbutton" href="#">About Me</a></li>
-								<li><a class="show-3 projectbutton" href="#">Plans</a></li>
-								<li><a class="show-4 blogbutton" href="#">Blog Entry</a></li>
-								<li><a class="show-5 contactbutton" href="#">Contact</a></li>
+								<li><a class="show-1 active homebutton" href="#">Home M</a></li>
+								<li><a class="show-2 aboutbutton" href="#">About Me M</a></li>
+								<li><a class="show-3 projectbutton" href="#">Plans M</a></li>
+								<li><a class="show-4 blogbutton" href="#">Blog Entry M</a></li>
+								<li><a class="show-5 contactbutton" href="#">Contact M</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -314,7 +312,7 @@
 		<span class="shape-2"></span>
 
 		<script src="js/jquery-3.7.0.min.js"></script>
-		<script src="js/main-templatemo-custom.js"></script>
+		<script src="js/omegahh.js"></script>
 
 	</body>
 </html>
