--- a/index.html
+++ b/index.html
@@ -49,17 +49,16 @@
 			</div>
 		</header>
 
-
 		<div id="menu-container">
 			<div id="menu-1" class="homepage home-section container">
 				<div class="home-intro text-center">
-					<h2 class="welcome-title animated fadeInLeft">Michael H. Hung</h2>
-					<p class="animated fadeInRight">The future is not set. There's no fate but what we make.</p>
+					<h2 class="welcome-title">Michael H. Hung</h2>
+					<p class="welcome-subtitle">The future is not set. There's no fate but what we make.</p>
 				</div>
 				<div class="home-projects">
 					<div class="row">
 						<div class="col-md-6 col-sm-12">
-							<div class="project-title animated fadeInUp">
+							<div class="project-title">
 								<h2>Research Interest</h2>
 								<p>I focus on researching machine learning, deep learning &amp; bioinformatics. I prefer to explore the theoretical principles of new techniques or mathematical models. It makes me happy when I uncover some mathematical insights of new models/techniques instead of just knowing how to implement them. I marvel at the immensity and beauty of math. Exploring it would be a long and tough way to go and I enjoy it. Go for it!</p>
 							</div>
@@ -107,7 +106,7 @@
 			<div id="menu-2" class="content about-section container">
 				<div class="our-story">
 					<div class="story-bg animated fadeIn"></div>
-					<div class="row">
+					<div class="row justify-content-md-center">
 						<div class="col-md-6 col-md-offset-3">
 							<div class="inner-story animated fadeInRight text-center">
 								<h2>ABOUT ME</h2>
@@ -313,6 +312,5 @@
 
 		<script src="js/jquery-3.7.0.min.js"></script>
 		<script src="js/omegahh.js"></script>
-
 	</body>
 </html>
