resolve aboutme page

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
 	<body>
 
-		<!--
-			Navigation bar
-		-->
+		<!-- Navigation bar -->
 		<header class="site-header container">
 			<div class="header-wrapper">
 				<div class="row">
@@ -49,6 +47,7 @@
 			</div>
 		</header>
 
+		<!-- 5 Main pages -->
 		<div id="menu-container">
 			<div id="menu-1" class="homepage home-section container">
 				<div class="home-intro text-center">
@@ -66,7 +65,7 @@
 						<div class="project-home-holder col-md-6 col-sm-12">
 							<div class="row">
 								<div class="col-md-6 col-sm-6">
-									<div class="project-item one animated fadeInRight">
+									<div class="project-item one">
 										<img src="photos/hobby1.jpg" alt="">
 										<div class="overlay">
 											<h4><a href="#">Mathematics</a></h4>
@@ -74,7 +73,7 @@
 									</div>
 								</div>
 								<div class="col-md-6 col-sm-6">
-									<div class="project-item two animated fadeInRight">
+									<div class="project-item two">
 										<img src="photos/hobby2.jpg" alt="">
 										<div class="overlay">
 											<h4><a href="#">Reading</a></h4>
@@ -82,7 +81,7 @@
 									</div>
 								</div>
 								<div class="col-md-6 col-sm-6">
-									<div class="project-item three animated fadeInRight">
+									<div class="project-item three">
 										<img src="photos/hobby3.jpg" alt="">
 										<div class="overlay">
 											<h4><a href="#">Geeking</a></h4>
@@ -90,7 +89,7 @@
 									</div>
 								</div>
 								<div class="col-md-6 col-sm-6">
-									<div class="project-item four animated fadeInRight">
+									<div class="project-item four">
 										<img src="photos/hobby4.jpg" alt="">
 										<div class="overlay">
 											<h4><a href="#">Guitar</a></h4>
@@ -105,10 +104,10 @@
 
 			<div id="menu-2" class="content about-section container">
 				<div class="our-story">
-					<div class="story-bg animated fadeIn"></div>
+					<div class="story-bg"></div>
 					<div class="row justify-content-md-center">
 						<div class="col-md-6 col-md-offset-3">
-							<div class="inner-story animated fadeInRight text-center">
+							<div class="inner-story text-center">
 								<h2>ABOUT ME</h2>
 								<p>I am Mike. I built this website and blog to record my research and life, to share interesting things by pictures and words. I am kind of a procrastinator. Hope this website and blog would remind and push me to keep the habit of recording and writing. :)</p>
 							</div>
@@ -116,42 +115,38 @@
 					</div>
 				</div>
 				<div class="our-offers">
-					<div class="offer-bg animated fadeIn"></div>
-					<div class="offer-header">
-						<div class="row">
-							<div class="col-md-6 col-md-offset-3 text-center">
-								<div class="offer-title animated fadeInDown">
-									<h2>Daily Life</h2>
-								</div>
+					<div class="offer-bg"></div>
+					<div class="row justify-content-md-center">
+						<div class="col-md-6 text-center">
+							<div class="offer-title">
+								<h2>Daily Life</h2>
 							</div>
 						</div>
 					</div>
 					<div class="row">
-						<div class="offer-holder">
-							<div class="col-md-6">
-								<div class="offer-item offer-1 animated fadeInLeft">
-									<figure>
-										<img src="photos/aboutme_work.jpg" alt="">
-									</figure>
-									<div class="offer-content text-center">
-										<h4>WORKING</h4>
-										<p>For research, I focused on applying machine learning or deep learning techniques to omics data analysis including transcriptomics and epigenomics. I prefer to understand these techniques from mathematical perspectives.<p>
-										<span class="offer-left"><i></i></span>
-										<span class="offer-right"><i></i></span>
-									</div>
+						<div class="col-md-6">
+							<div class="offer-item offer-1">
+								<figure>
+									<img src="photos/aboutme_work.webp" alt="">
+								</figure>
+								<div class="offer-content text-center">
+									<h4>WORKING</h4>
+									<p>For research, I focused on applying machine learning or deep learning techniques to omics data analysis including transcriptomics and epigenomics. I prefer to understand these techniques from mathematical perspectives.<p>
+									<span class="offer-left"><i></i></span>
+									<span class="offer-right"><i></i></span>
 								</div>
 							</div>
-							<div class="col-md-6">
-								<div class="offer-item offer-2 animated fadeInRight">
-									<figure>
-										<img src="photos/aboutme_play.jpg" alt="">
-									</figure>
-									<div class="offer-content text-center">
-										<h4>Playing</h4>
-										<p>I like swimming. It makes me feel free and relaxed. That's my daily routine in summer. Swimming and playing the guitar are my entertainments in leisure time.</p>
-										<span class="offer-left"><i></i></span>
-										<span class="offer-right"><i></i></span>
-									</div>
+						</div>
+						<div class="col-md-6">
+							<div class="offer-item offer-2">
+								<figure>
+									<img src="photos/aboutme_play.webp" alt="">
+								</figure>
+								<div class="offer-content text-center">
+									<h4>Playing</h4>
+									<p>I like swimming. It makes me feel free and relaxed. That's my daily routine in summer. Swimming and playing the guitar are my entertainments in leisure time.</p>
+									<span class="offer-left"><i></i></span>
+									<span class="offer-right"><i></i></span>
 								</div>
 							</div>
 						</div>
