fix up menu names

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 						</nav>
 						<nav class="main-navigation menu-responsive d-lg-none">
 							<ul class="main-menu">
-								<li><a class="show-1 active homebutton" href="#">Home M</a></li>
-								<li><a class="show-2 aboutbutton" href="#">About Me M</a></li>
-								<li><a class="show-3 projectbutton" href="#">Plans M</a></li>
-								<li><a class="show-4 blogbutton" href="#">Blog Entry M</a></li>
-								<li><a class="show-5 contactbutton" href="#">Contact M</a></li>
+								<li><a class="show-1 active homebutton" href="#">Home</a></li>
+								<li><a class="show-2 aboutbutton" href="#">About Me</a></li>
+								<li><a class="show-3 projectbutton" href="#">Plans</a></li>
+								<li><a class="show-4 blogbutton" href="#">Blog Entry</a></li>
+								<li><a class="show-5 contactbutton" href="#">Contact</a></li>
 							</ul>
 						</nav>
 					</div>
