update reading list page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<h2 class="welcome-title">Michael H. Hung</h2>
 					<p class="welcome-subtitle">The future is not set. There's no fate but what we make.</p>
 				</div>
-				<div class="home-projects">
+				<div class="home-contents">
 					<div class="row">
 						<div class="col-md-6 col-sm-12">
 							<div class="project-title">
@@ -62,11 +62,11 @@
 								<p>I focus on researching machine learning, deep learning &amp; bioinformatics. I prefer to explore the theoretical principles of new techniques or mathematical models. It makes me happy when I uncover some mathematical insights of new models/techniques instead of just knowing how to implement them. I marvel at the immensity and beauty of math. Exploring it would be a long and tough way to go and I enjoy it. Go for it!</p>
 							</div>
 						</div>
-						<div class="project-home-holder col-md-6 col-sm-12">
+						<div class="col-md-6 col-sm-12">
 							<div class="row">
 								<div class="col-md-6 col-sm-6">
 									<div class="project-item one">
-										<img src="photos/hobby1.jpg" alt="">
+										<img src="photos/hobby1.webp" alt="">
 										<div class="overlay">
 											<h4><a href="#">Mathematics</a></h4>
 										</div>
@@ -74,7 +74,7 @@
 								</div>
 								<div class="col-md-6 col-sm-6">
 									<div class="project-item two">
-										<img src="photos/hobby2.jpg" alt="">
+										<img src="photos/hobby2.webp" alt="">
 										<div class="overlay">
 											<h4><a href="#">Reading</a></h4>
 										</div>
@@ -82,7 +82,7 @@
 								</div>
 								<div class="col-md-6 col-sm-6">
 									<div class="project-item three">
-										<img src="photos/hobby3.jpg" alt="">
+										<img src="photos/hobby3.webp" alt="">
 										<div class="overlay">
 											<h4><a href="#">Geeking</a></h4>
 										</div>
@@ -90,7 +90,7 @@
 								</div>
 								<div class="col-md-6 col-sm-6">
 									<div class="project-item four">
-										<img src="photos/hobby4.jpg" alt="">
+										<img src="photos/hobby4.webp" alt="">
 										<div class="overlay">
 											<h4><a href="#">Guitar</a></h4>
 										</div>
@@ -156,30 +156,30 @@
 
 			<div id="menu-3" class="content project-section container">
 				<div class="projects-header">
-					<h2 class="animated fadeInRight">Reading List</h2>
-					<p class="animated fadeInLeft">Finish Reading these BOOKS in THIS year!</p>
+					<h2 class="welcome-title">Reading List</h2>
+					<p class="welcome-subtitle">Finish Reading these BOOKS in THIS year!</p>
 				</div>
 				<div class="projects-holder">
 					<div class="row">
-						<div class="col-md-4 col-sm-6 p-1 animated umScaleIn">
-							<div class="project-item">
-								<img src="photos/read1.jpg" alt="">
+						<div class="col-md-4 col-sm-6">
+							<div class="project-item proj1 animatescalein">
+								<img src="photos/read1.webp" alt="">
 								<div class="overlay">
 									<h4><a href="#">Volume One Finished</a></h4>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-sm-6 p-2 animated umScaleIn">
-							<div class="project-item">
-								<img src="photos/read2.jpg" alt="">
+						<div class="col-md-4 col-sm-6">
+							<div class="project-item proj2 animatescalein">
+								<img src="photos/read2.webp" alt="">
 								<div class="overlay">
 									<h4><a href="#">Chapter 9/14</a></h4>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-sm-6 p-3 animated umScaleIn">
-							<div class="project-item">
-								<img src="photos/read3.jpg" alt="">
+						<div class="col-md-4 col-sm-6">
+							<div class="project-item proj3 animatescalein">
+								<img src="photos/read3.webp" alt="">
 								<div class="overlay">
 									<h4><a href="#">Learn with MOOC</a></h4>
 								</div>
@@ -187,33 +187,33 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-3 col-sm-6 p-4 animated umScaleIn">
-							<div class="project-item animated umScaleIn">
-								<img src="photos/read4.jpg" alt="">
+						<div class="col-md-3 col-sm-6">
+							<div class="project-item proj4 animatescalein">
+								<img src="photos/read4.webp" alt="">
 								<div class="overlay">
 									<h4><a href="#">Underway</a></h4>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6">
-							<div class="project-item p-5 animated umScaleIn">
-								<img src="photos/read5.jpg" alt="">
+							<div class="project-item proj5 animatescalein">
+								<img src="photos/read5.webp" alt="">
 								<div class="overlay">
 									<h4><a href="#">Underway</a></h4>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6">
-							<div class="project-item p-6 animated umScaleIn">
-								<img src="photos/read6.jpg" alt="">
+							<div class="project-item proj6 animatescalein">
+								<img src="photos/read6.webp" alt="">
 								<div class="overlay">
 									<h4><a href="#">Book Six</a></h4>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6">
-							<div class="project-item p-7 animated umScaleIn">
-								<img src="photos/read7.jpg" alt="">
+							<div class="project-item proj7 animatescalein">
+								<img src="photos/read7.webp" alt="">
 								<div class="overlay">
 									<h4><a href="#">Book Seven</a></h4>
 								</div>
