--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 					<div class="row">
 						<div class="col-lg-6 d-none d-lg-block">
 							<div class="canvas-holder" id="fractal">
-							<canvas id="canvas", style="width: 100%; height: 100%;"></canvas>
+								<canvas id="canvas"></canvas>
 							</div>
 						</div>
 						<div class="col-lg-6 col-md-12">
