--- a/index.html
+++ b/index.html
@@ -254,23 +254,28 @@
 						<div class="col-lg-6 col-md-12">
 							<div class="contact-form animated fadeInUp">
 								<h4>Send me a Message</h4>
-								<div class="row">
-									<fieldset class="col-md-6">
-										<input type="text" name="name" placeholder="Your name">
-									</fieldset>
-									<fieldset class="col-md-6">
-										<input type="email" name="email" placeholder="Your name">
-									</fieldset>
-									<fieldset class="col-md-12">
-										<input type="text" name="subject" placeholder="Subject">
-									</fieldset>
-									<fieldset class="col-md-12">
-										<textarea name="message" id="message" cols="30" rows="10" placeholder="Leave a message (Not work yet)"></textarea>
-									</fieldset>
-									<fieldset class="col-md-12">
-										<a href="#" class="message-button">Submit Message</a>
-									</fieldset>
-								</div>
+								<form id="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+									<div class="row">
+										<fieldset class="col-md-6">
+											<input type="text" name="name" placeholder="Your name" required>
+										</fieldset>
+										<fieldset class="col-md-6">
+											<input type="email" name="email" placeholder="Your email" required>
+										</fieldset>
+										<fieldset class="col-md-12">
+											<input type="text" name="subject" placeholder="Subject" required>
+										</fieldset>
+										<fieldset class="col-md-12">
+											<textarea name="message" id="message" cols="30" rows="10" placeholder="Leave a message" required></textarea>
+										</fieldset>
+										<fieldset class="col-md-12">
+											<button type="submit" class="message-button">Submit Message</button>
+										</fieldset>
+										<fieldset class="col-md-12">
+											<div id="form-status" style="display: none; margin-top: 10px; padding: 10px; border-radius: 4px;"></div>
+										</fieldset>
+									</div>
+								</form>
 							</div>
 						</div>
 					</div>
