Optimize site performance, SEO, accessibility and update research focus
- Replace CSS @import with link tags and preconnect hints for fonts/CDNs
- Add font-display: swap to all @font-face in blog-lotus.css
- Replace animate.css library with single fadeInDown keyframe
- Add descriptive alt text to all images in index.html
- Gate MathJax loading behind page.math frontmatter flag
- Remove console.log statements from fractal.js
- Add Open Graph meta tags to index.html and blog layout
- Add JSON-LD BlogPosting structured data to post layout
- Fix duplicate rel=nofollow in post.html and about.html
- Remove unused .blue/.green/.pink utility classes
- Update research focus to AIGC, AI Agents and Genomics

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Omega Alpha | Machine Learner</title>
+		<title>Omega Alpha | AI &amp; Genomics</title>
+		<meta property="og:title" content="Omega Alpha | AI &amp; Genomics">
+		<meta property="og:description" content="Personal website of Michael H. Hung - AI Agents &amp; Genomics researcher">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://omegaxy.com">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+		<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 		<link rel="stylesheet" href="css/main-font-awesome.min.css">
 		<link rel="stylesheet" href="css/main-simple-line-icons.css">
 		<link rel="stylesheet" href="css/omegahh.css">
@@ -58,14 +67,14 @@
 						<div class="col-md-6 col-sm-12">
 							<div class="project-title">
 								<h2>Research Interest</h2>
-								<p>I focus on researching machine learning, deep learning &amp; bioinformatics. I prefer to explore the theoretical principles of new techniques or mathematical models. It makes me happy when I uncover some mathematical insights of new models/techniques instead of just knowing how to implement them. I marvel at the immensity and beauty of math. Exploring it would be a long and tough way to go and I enjoy it. Go for it!</p>
+								<p>I focus on AIGC, AI Agents and AI models for understanding genome sequences — understanding the language of life. I build intelligent systems that decode biological data and explore the frontier where artificial intelligence meets genomics.</p>
 							</div>
 						</div>
 						<div class="col-md-6 col-sm-12">
 							<div class="row">
 								<div class="col-md-6 col-sm-6">
 									<div class="project-item one">
-										<img src="photos/hobby1.webp" alt="">
+										<img src="photos/hobby1.webp" alt="Mathematics hobby">
 										<div class="overlay">
 											<h4><a href="#">Mathematics</a></h4>
 										</div>
@@ -73,7 +82,7 @@
 								</div>
 								<div class="col-md-6 col-sm-6">
 									<div class="project-item two">
-										<img src="photos/hobby2.webp" alt="">
+										<img src="photos/hobby2.webp" alt="Reading hobby">
 										<div class="overlay">
 											<h4><a href="#">Reading</a></h4>
 										</div>
@@ -81,7 +90,7 @@
 								</div>
 								<div class="col-md-6 col-sm-6">
 									<div class="project-item three">
-										<img src="photos/hobby3.webp" alt="">
+										<img src="photos/hobby3.webp" alt="Geeking hobby">
 										<div class="overlay">
 											<h4><a href="#">Geeking</a></h4>
 										</div>
@@ -89,7 +98,7 @@
 								</div>
 								<div class="col-md-6 col-sm-6">
 									<div class="project-item four">
-										<img src="photos/hobby4.webp" alt="">
+										<img src="photos/hobby4.webp" alt="Guitar hobby">
 										<div class="overlay">
 											<h4><a href="#">Guitar</a></h4>
 										</div>
@@ -126,11 +135,11 @@
 						<div class="col-md-6">
 							<div class="offer-item offer-1">
 								<figure>
-									<img src="photos/aboutme_work.webp" alt="">
+									<img src="photos/aboutme_work.webp" alt="Working on research">
 								</figure>
 								<div class="offer-content text-center">
 									<h4>WORKING</h4>
-									<p>For research, I focused on applying machine learning or deep learning techniques to omics data analysis including transcriptomics and epigenomics. I prefer to understand these techniques from mathematical perspectives.<p>
+									<p>I work on AI Agents and generative AI models applied to genomics, building systems that understand and interpret genome sequences. From foundation models for DNA to agentic workflows for bioinformatics pipelines, I explore how AI can decode the language of life.<p>
 									<span class="offer-left"><i></i></span>
 									<span class="offer-right"><i></i></span>
 								</div>
@@ -139,7 +148,7 @@
 						<div class="col-md-6">
 							<div class="offer-item offer-2">
 								<figure>
-									<img src="photos/aboutme_play.webp" alt="">
+									<img src="photos/aboutme_play.webp" alt="Leisure activities">
 								</figure>
 								<div class="offer-content text-center">
 									<h4>Playing</h4>
@@ -162,7 +171,7 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-6">
 							<div class="project-item proj1 animatescalein">
-								<img src="photos/read1.webp" alt="">
+								<img src="photos/read1.webp" alt="Book: Volume One Finished">
 								<div class="overlay">
 									<h4><a href="#">Volume One Finished</a></h4>
 								</div>
@@ -170,7 +179,7 @@
 						</div>
 						<div class="col-md-4 col-sm-6">
 							<div class="project-item proj2 animatescalein">
-								<img src="photos/read2.webp" alt="">
+								<img src="photos/read2.webp" alt="Book: Chapter 9 of 14">
 								<div class="overlay">
 									<h4><a href="#">Chapter 9/14</a></h4>
 								</div>
@@ -178,7 +187,7 @@
 						</div>
 						<div class="col-md-4 col-sm-6">
 							<div class="project-item proj3 animatescalein">
-								<img src="photos/read3.webp" alt="">
+								<img src="photos/read3.webp" alt="Book: Learn with MOOC">
 								<div class="overlay">
 									<h4><a href="#">Learn with MOOC</a></h4>
 								</div>
@@ -188,7 +197,7 @@
 					<div class="row">
 						<div class="col-md-3 col-sm-6">
 							<div class="project-item proj4 animatescalein">
-								<img src="photos/read4.webp" alt="">
+								<img src="photos/read4.webp" alt="Book: Underway">
 								<div class="overlay">
 									<h4><a href="#">Underway</a></h4>
 								</div>
@@ -196,7 +205,7 @@
 						</div>
 						<div class="col-md-3 col-sm-6">
 							<div class="project-item proj5 animatescalein">
-								<img src="photos/read5.webp" alt="">
+								<img src="photos/read5.webp" alt="Book: Underway">
 								<div class="overlay">
 									<h4><a href="#">Underway</a></h4>
 								</div>
@@ -204,7 +213,7 @@
 						</div>
 						<div class="col-md-3 col-sm-6">
 							<div class="project-item proj6 animatescalein">
-								<img src="photos/read6.webp" alt="">
+								<img src="photos/read6.webp" alt="Book: Book Six">
 								<div class="overlay">
 									<h4><a href="#">Book Six</a></h4>
 								</div>
@@ -212,7 +221,7 @@
 						</div>
 						<div class="col-md-3 col-sm-6">
 							<div class="project-item proj7 animatescalein">
-								<img src="photos/read7.webp" alt="">
+								<img src="photos/read7.webp" alt="Book: Book Seven">
 								<div class="overlay">
 									<h4><a href="#">Book Seven</a></h4>
 								</div>
